# django-13

./: README.md  pyproject.toml
quotes/quotes/: settings.py  urls.py
quotes/quotes_app/: forms.py  models.py  urls.py  views.py
quotes/quotes_app/migrations/: 0001_initial.py  0002_remove_quote_tags_alter_quote_author.py  0003_alter_quote_author_alter_tag_tag.py  0004_quote_tags.py  0005_alter_quote_author.py  0006_alter_quote_tags.py  0007_alter_quote_tags.py  0008_alter_quote_tags.py  0009_quote_user.py
quotes/quotes_app/templates/quotes_app/: add_author.html  add_quote.html  add_tag.html  base.html  index.html  quotes.html
quotes/users/: urls.py  views.py
quotes/users/templates/users/: logout.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  signin.html  signup.html
